# Jogo

./: .env  Lista de Jogos.html  ListaJogos.db  README copy.md  README.md  Teste.py  celery_app.py  docker-compose.yml  dockerfile  fatorial.py  kafka_producer.py  kaka_producer.py  pyproject.toml  requirements.txt
tests/: test_soma.py
