[tool.poetry]
name = "tambom"
version = "0.1.0"
description = ""
authors = ["Kauan Lopes <kauanlopes2706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.135.2"}
sqlalchemy = "^2.0.48"
uvicorn = "^0.42.0"
redis = "^7.4.0"
celery = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
