[tool.poetry]
name = "tambom"
version = "0.1.0"
description = ""
authors = ["Kauan Lopes <kauanlopes2706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.136.0"}
sqlalchemy = "^2.0.48"
uvicorn = "^0.42.0"
redis = "^7.4.0"
celery = "^5.6.3"
psycopg2-binary = "^2.9.12"
confluent-kafka = "^2.14.0"
kafka-python = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
